--- a/templates/bootstrap.html
+++ b/templates/bootstrap.html
@@ -1,16 +1,19 @@
-<!--Questo file contiene tutti i riferimenti per attivare bootstrap dentro una pagina web e viene normalmente incluso tramite apposito comando-->	
-<meta charset="utf-8">
-<!-- Bootstrap4 -->
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<!-- Popper JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<!-- Latest compiled JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> 
-<!-- Icona del browser-->
-<link rel="icon" href="/static/img/icon_browser.png" type="image/x-icon">
-<!-- Libreria icone-->
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">    
+  <!--Titolo pagina con relativa icona e informazioni autore-->
+  <title>MGrep</title>    
+  <link rel="icon" href="/static/img/icon_browser.png" type="image/x-icon">
+  <meta name="description" content="MGrep a set of tools for Oracle's programmers">
+  <meta name="author" content="Marco Valaguzza">  
+  <!-- Libreria icone-->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+  <!-- Bootstrap core CSS -->
+  <link href="/static/css/bootstrap.css" rel="stylesheet">	  
+  <!-- Custom styles for this template -->
+  <link href="/static/css/dashboard.css" rel="stylesheet">
+	<!-- Includo la libreria per ordinare le colonne di tabella tramite la classe "sortable" -->
+	<script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
+	<style> table.sortable th:not(.sorttable_sorted):not(.sorttable_sorted_reverse):not(.sorttable_nosort):after { content: " \25B4\25BE" } </style>
+	<!-- Includo la libreria per esportare i dati in excel e csv-->
+	<script src="/static/plugin/excellentexport-1.4/excellentexport.js"></script>
