--- a/templates/session_info.html
+++ b/templates/session_info.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-	<title>MGrep - Session Info</title>
+<head>	
 	<!-- Importo tramite Flask html contenente i riferimenti alle librerie bootstrap -->
 	{% include 'bootstrap.html' %}
 </head>
 
 <body>
 
-<!-- Importo tramite Flask html contenente i menu e tutta l'intestazione -->
-<div>
+	<!-- Importo tramite Flask html contenente i menu e tutta l'intestazione -->
 	{% include 'menubar.html' %}
-</div>
 
-<!-- Contenuti (griglia) -->
-{{ python_info_sessione|safe }}
+	<!--Main-->
+	<main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4"><div style="position: absolute; inset: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;" class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:1000000px;height:1000000px;left:0;top:0"></div></div><div class="chartjs-size-monitor-shrink" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:200%;height:200%;left:0; top:0"></div></div></div>
+		<!-- Contenuti (griglia) -->
+		{{ python_info_sessione|safe }}
+	</main>		
+
+<!-- Importo tramite Flask html contenente la parte finale della pagina -->
+{% include 'footer.html' %}
+
+</body>
 
 </html>
